--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 		"mediawiki/mediawiki-phan-config": "0.11.0",
 		"mediawiki/minus-x": "1.1.1",
 		"php-parallel-lint/php-console-highlighter": "0.5.0",
-		"php-parallel-lint/php-parallel-lint": "1.3.1"
+		"php-parallel-lint/php-parallel-lint": "1.3.1",
+		"phpbench/phpbench": "^1.1"
 	},
 	"scripts": {
 		"fix": [
@@ -16,6 +17,7 @@
 			"@phpcs",
 			"minus-x check ."
 		],
+		"phpbench": "phpbench run tests/Benchmark --revs=20",
 		"phan": "phan -d . --long-progress-bar",
 		"phpcs": "phpcs -s -p --cache"
 	}
