--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
 		"minify-svg": "svgo --config=.svgo.config.js --quiet --recursive --folder images/",
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
-		"test": "grunt test"
+		"test": "grunt test && npm run test:jest",
+		"test:jest": "jest"
 	},
 	"devDependencies": {
+		"@vue/test-utils": "2.0.0-rc.18",
+		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"@wdio/cli": "7.16.10",
 		"@wdio/devtools-service": "7.16.10",
 		"@wdio/dot-reporter": "7.16.6",
@@ -15,15 +18,23 @@
 		"@wdio/local-runner": "7.16.10",
 		"@wdio/mocha-framework": "7.16.6",
 		"api-testing": "1.4.2",
+		"babel-core": "6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
 		"grunt": "1.4.1",
 		"grunt-banana-checker": "0.9.0",
 		"grunt-eslint": "24.0.0",
 		"grunt-stylelint": "0.17.0",
+		"jest": "27.4.7",
+		"jquery": "3.6.0",
 		"stylelint-config-wikimedia": "0.12.2",
 		"svgo": "2.8.0",
+		"vue": "3.2.27",
 		"wdio-intercept-service": "4.2.2",
 		"wdio-mediawiki": "2.0.0",
 		"webdriverio": "7.16.10"
+	},
+	"engines": {
+		"npm": ">=7.21.0",
+		"node": ">=14"
 	}
 }
