--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,12 @@
 	"rules": {
 		"max-len": "warn"
 	},
+	"overrides": [
+		{
+			"files": "**/*.vue",
+			"extends": "wikimedia/vue-es5"
+		}
+	],
 	"settings": {
 		"jsdoc": {
 			"preferredTypes": {
