--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@wdio/local-runner": "7.16.10",
 		"@wdio/mocha-framework": "7.16.6",
 		"@wdio/sync": "7.16.10",
+		"@wikimedia/wvui": "^0.3.5",
 		"api-testing": "^1.4.2",
 		"babel-core": "^6.26.3",
 		"eslint-config-wikimedia": "0.21.0",
