--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"api-testing": "mocha tests/api-testing",
+		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
 		"minify-svg": "svgo --config=.svgo.config.js -q -r -f images/",
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
