--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@wdio/junit-reporter": "7.16.6",
 		"@wdio/local-runner": "7.16.10",
 		"@wdio/mocha-framework": "7.16.6",
-		"api-testing": "^1.4.2",
+		"api-testing": "1.4.2",
 		"eslint-config-wikimedia": "0.21.0",
 		"grunt": "1.4.0",
 		"grunt-banana-checker": "0.9.0",
@@ -23,6 +23,6 @@
 		"stylelint-config-wikimedia": "0.11.1",
 		"svgo": "2.3.1",
 		"wdio-mediawiki": "2.0.0",
-		"webdriverio": "^7.16.10"
+		"webdriverio": "7.16.10"
 	}
 }
