--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"scripts": {
 		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
-		"minify-svg": "svgo --config=.svgo.config.js -q -r -f images/",
+		"minify-svg": "svgo --config=.svgo.config.js --quiet --recursive --folder images/",
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"test": "grunt test"
@@ -21,7 +21,7 @@
 		"grunt-eslint": "23.0.0",
 		"grunt-stylelint": "0.16.0",
 		"stylelint-config-wikimedia": "0.11.1",
-		"svgo": "2.3.1",
+		"svgo": "2.8.0",
 		"wdio-mediawiki": "2.0.0",
 		"webdriverio": "7.16.10"
 	}
