--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"grunt-stylelint": "0.16.0",
 		"stylelint-config-wikimedia": "0.11.1",
 		"svgo": "2.8.0",
+		"wdio-intercept-service": "4.2.2",
 		"wdio-mediawiki": "2.0.0",
 		"webdriverio": "7.16.10"
 	}
