--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
 		"minify-svg": "svgo --config=.svgo.config.js --quiet --recursive --folder images/",
 		"selenium-daily": "npm run selenium-test",
+		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"test": "grunt test"
 	},
 	"devDependencies": {
