--- a/modules/ext.growthExperiments.MentorDashboard.Vue/.eslintrc.json
+++ b/modules/ext.growthExperiments.MentorDashboard.Vue/.eslintrc.json
@@ -1,7 +1,6 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es6",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -13,12 +12,25 @@
 		"commonjs": true
 	},
 	"rules": {
-		"max-len": "off"
+		"max-len": "warn",
+		"compat/compat": "warn"
 	},
 	"overrides": [
 		{
 			"files": "**/*.vue",
-			"extends": "wikimedia/vue-es6"
+			"extends": [
+				"wikimedia/client-common",
+				"wikimedia/vue3-es6"
+			],
+			"rules": {
+				"vue/component-name-in-template-casing": [ "error", "kebab-case" ]
+			}
+		},
+		{
+			"files": [ "**/*.js" ],
+			"extends": [
+				"wikimedia/client-es6"
+			]
 		},
 		{
 			"files": [ "**/*.test.js" ],
