--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 		"selenium-daily": "npm run selenium-test",
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"test": "grunt test && npm run test:jest",
-		"test:jest": "jest"
+		"test:jest": "jest",
+		"coverage": "npm run test:jest"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "7.16.11",
+		"@vue/compat": "3.2.31",
 		"@vue/test-utils": "2.0.0-rc.18",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"@wdio/cli": "7.19.7",
@@ -18,6 +21,7 @@
 		"@wdio/local-runner": "7.19.7",
 		"@wdio/mocha-framework": "7.16.6",
 		"@wdio/spec-reporter": "7.19.7",
+		"@wikimedia/codex": "0.1.0-alpha.7",
 		"api-testing": "1.5.0",
 		"babel-core": "6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
@@ -27,9 +31,12 @@
 		"grunt-stylelint": "0.17.0",
 		"jest": "27.4.7",
 		"jquery": "3.6.0",
+		"postcss-html": "1.4.1",
+		"stylelint-config-recommended-vue": "1.4.0",
 		"stylelint-config-wikimedia": "0.13.0",
 		"svgo": "2.8.0",
-		"vue": "3.2.27",
+		"vue": "3.2.31",
+		"vuex": "4.0.2",
 		"wdio-intercept-service": "4.2.2",
 		"wdio-mediawiki": "2.1.0",
 		"webdriverio": "7.19.7"
