--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"@wdio/cli": "7.19.7",
 		"@wdio/devtools-service": "7.19.7",
-		"@wdio/dot-reporter": "7.16.6",
 		"@wdio/junit-reporter": "7.16.6",
 		"@wdio/local-runner": "7.19.7",
 		"@wdio/mocha-framework": "7.16.6",
+		"@wdio/spec-reporter": "7.19.7",
 		"api-testing": "1.5.0",
 		"babel-core": "6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
@@ -31,7 +31,7 @@
 		"svgo": "2.8.0",
 		"vue": "3.2.27",
 		"wdio-intercept-service": "4.2.2",
-		"wdio-mediawiki": "2.0.0",
+		"wdio-mediawiki": "2.1.0",
 		"webdriverio": "7.19.7"
 	},
 	"engines": {
