--- a/modules/ext.growthExperiments.MentorDashboard.Vue/.stylelintrc.json
+++ b/modules/ext.growthExperiments.MentorDashboard.Vue/.stylelintrc.json
@@ -2,5 +2,8 @@
 	"extends": [
 		"stylelint-config-wikimedia",
 		"stylelint-config-recommended-vue"
-	]
+	],
+	"rules": {
+		"selector-class-pattern": "^ext-growthExperiments-"
+	}
 }
