Add 'composer phpcbf' command
'composer fix' also calls x-minus which dies when given multiple
arguments. Listing the files in the commit can help speed up PHPCBF.

Change-Id: Id6fb42735e482f06e9328ec017ce0969255afdb8

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	"scripts": {
 		"fix": [
 			"minus-x fix .",
-			"phpcbf"
+			"@phpcbf"
 		],
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
@@ -19,6 +19,7 @@
 		],
 		"phpbench": "phpbench run tests/Benchmark --revs=20",
 		"phan": "phan -d . --long-progress-bar",
-		"phpcs": "phpcs -s -p --cache"
+		"phpcs": "phpcs -s -p --cache",
+		"phpcbf": "phpcbf"
 	}
 }
