Mentor dashboard: use vue globals for passing filter functions to components
Follow-up: Ib4fc8a80f562bc81f76a66725e953afedd8c3665
Bug: T318357
Change-Id: Ib22aac8fd22a0aa954dea7fb87ca9edfbba2dc78

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"selenium-test": "wdio tests/selenium/wdio.conf.js",
 		"test": "grunt test && npm run test:jest",
 		"test:jest": "jest",
+		"test:jest:update": "jest -u",
 		"coverage": "npm run test:jest"
 	},
 	"devDependencies": {
