--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.16.11",
-		"@vue/compat": "3.2.31",
-		"@vue/test-utils": "2.0.0-rc.18",
+		"@vue/compat": "3.2.37",
+		"@vue/test-utils": "2.0.0-rc.21",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"@wdio/cli": "7.19.7",
 		"@wdio/devtools-service": "7.19.7",
@@ -22,7 +22,7 @@
 		"@wdio/local-runner": "7.19.7",
 		"@wdio/mocha-framework": "7.16.6",
 		"@wdio/spec-reporter": "7.19.7",
-		"@wikimedia/codex": "0.1.0-alpha.7",
+		"@wikimedia/codex": "0.2.1",
 		"api-testing": "1.5.0",
 		"babel-core": "6.26.3",
 		"eslint-config-wikimedia": "0.22.1",
@@ -37,7 +37,7 @@
 		"stylelint-config-recommended-vue": "1.4.0",
 		"stylelint-config-wikimedia": "0.13.0",
 		"svgo": "2.8.0",
-		"vue": "3.2.31",
+		"vue": "3.2.37",
 		"vuex": "4.0.2",
 		"wdio-intercept-service": "4.2.2",
 		"wdio-mediawiki": "2.1.0",
