build: Updating npm dependencies
* grunt-banana-checker: 0.9.0 → 0.10.0
* @wikimedia/codex: 0.2.1 → 0.2.2

Additional changes:
* Also added phpcbf to "composer fix" command.

Change-Id: Icad4bf42641b26188ee441a0dc9ab708f1406cfe

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 	"scripts": {
 		"fix": [
 			"minus-x fix .",
-			"@phpcbf"
+			"@phpcbf",
+			"phpcbf"
 		],
 		"test": [
 			"parallel-lint . --exclude vendor --exclude node_modules",
