NewImpact: Use d3 subpackages
Create a custom build of d3 subpackages we need for the Impact module.
This results in a reduction from 279kB to 115kB.

To generate the minified files, run `npm run rollup`.

Since we're no longer pulling d3.min.js from an npm package dist
directory, remove the entry in foreign-resources.yaml.

Co-authored-by: Eric Gardner <egardner@wikimedia.org>
Bug: T321215
Change-Id: If6f6caf84c33aee4d051cbf5d866b1610ce14b23

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
 		"test": "grunt test && npm run test:jest",
 		"test:jest": "jest",
 		"test:jest:update": "jest -u",
-		"coverage": "npm run test:jest"
+		"coverage": "npm run test:jest",
+		"rollup": "rollup -c"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "7.16.11",
+		"@rollup/plugin-node-resolve": "15.0.1",
+		"@rollup/plugin-terser": "0.1.0",
 		"@vue/compat": "3.2.37",
 		"@vue/test-utils": "2.0.0-rc.21",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
@@ -25,6 +28,14 @@
 		"@wikimedia/codex": "0.2.2",
 		"api-testing": "1.5.0",
 		"babel-core": "6.26.3",
+		"d3-array": "3.2.0",
+		"d3-interpolate": "3.0.1",
+		"d3-path": "3.0.1",
+		"d3-scale": "4.0.2",
+		"d3-selection": "3.0.0",
+		"d3-shape": "3.1.0",
+		"d3-time": "3.0.0",
+		"d3-time-format": "4.1.0",
 		"eslint-config-wikimedia": "0.22.1",
 		"grunt": "1.5.3",
 		"grunt-banana-checker": "0.10.0",
@@ -34,6 +45,7 @@
 		"jquery": "3.6.1",
 		"moment": "^2.29.4",
 		"postcss-html": "1.4.1",
+		"rollup": "3.2.5",
 		"stylelint-config-recommended-vue": "1.4.0",
 		"stylelint-config-wikimedia": "0.13.0",
 		"svgo": "2.8.0",
