vue tests: mock i18n plugin in jest setup
The mock allows less boilerplating for component
tests using Vue.prototype.$i18n method. Taken from
MachineVision extension.

The i18n usage is a bit confusing in the sense that
it returns an mw.Message object but passing it to a
Vue template expression works: {{ i18n( 'text-key' ) }}.

We should probably call .text() and prefer passing strings to
template evaluation functions. See follow-up patches.

Change-Id: I65f46f826463e1a1d7e1fc72fb587f3a11461d16

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,15 @@
 	"root": true,
 	"extends": [
 		"wikimedia/server"
+	],
+	"overrides": [
+		{
+			"files": [ "jest.setup.js" ],
+			"extends": [
+				"wikimedia/language/es6",
+				"wikimedia/mediawiki"
+			]
+		}
+
 	]
 }
