--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"grunt-eslint": "24.0.0",
 		"grunt-stylelint": "0.18.0",
 		"jest": "27.4.7",
+		"jest-fail-on-console": "^3.0.2",
 		"jquery": "3.6.1",
 		"moment": "^2.29.4",
 		"postcss-html": "1.4.1",
