--- a/modules/ext.growthExperiments.Homepage.NewImpact/.eslintrc.json
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/.eslintrc.json
@@ -23,7 +23,13 @@
 				"wikimedia/vue3-es6"
 			],
 			"rules": {
-				"vue/component-name-in-template-casing": [ "error", "kebab-case" ]
+				"max-len": "off",
+				"vue/component-name-in-template-casing": [ "error", "kebab-case" ],
+				"vue/max-len": [ "error", {
+					"code": 120,
+					"template": 120,
+					"comments": 120
+				} ]
 			}
 		},
 		{
