--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
 		"vue": "3.2.37",
 		"vuex": "4.0.2",
 		"wdio-intercept-service": "4.2.2",
-		"wdio-mediawiki": "2.1.0",
-		"webdriverio": "7.19.7"
+		"wdio-mediawiki": "2.1.0"
 	},
 	"engines": {
 		"npm": ">=7.21.0",
