--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -11,9 +11,9 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "4.0.0",
-		"@wikimedia/codex": "^0.5.0",
-		"@wikimedia/codex-design-tokens": "^0.5.0",
-		"@wikimedia/codex-icons": "^0.5.0",
+		"@wikimedia/codex": "0.6.1",
+		"@wikimedia/codex-design-tokens": "0.6.1",
+		"@wikimedia/codex-icons": "0.6.1",
 		"eslint": "^8.33.0",
 		"less": "2.5.3",
 		"vite": "4.1.1",
