--- a/modules/vue-components/.eslintrc.json
+++ b/modules/vue-components/.eslintrc.json
@@ -23,7 +23,13 @@
 				"wikimedia/vue3-es6"
 			],
 			"rules": {
-				"vue/component-name-in-template-casing": [ "error", "kebab-case" ]
+				"max-len": "off",
+				"vue/component-name-in-template-casing": [ "error", "kebab-case" ],
+				"vue/max-len": [ "error", {
+					"code": 120,
+					"template": 120,
+					"comments": 120
+				} ]
 			}
 		},
 		{
@@ -34,6 +40,9 @@
 		},
 		{
 			"files": [ "**/*.test.js" ],
+			"rules": {
+				"compat/compat": "off"
+			},
 			"env": {
 				"jest": true
 			}
