Update project gitignore
Ignores PHPStorm's .idea/ folder and OS X .DS_Store files

Change-Id: Iec5783f5efedd086e1d21bf57292bc94665f0940

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 /node_modules
 /vendor
+/.idea
 /composer.lock
 /.nyc_output
 /coverage
 /.eslintcache
 /tests/selenium/log
 /.api-testing.config.json
+.DS_Store
