--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -16,6 +16,8 @@
 		"@wikimedia/codex-icons": "0.6.1",
 		"eslint": "^8.33.0",
 		"less": "2.5.3",
+		"postcss": "8.4.21",
+		"postcss-prefix-selector": "1.16.0",
 		"vite": "4.1.1",
 		"vitepress": "1.0.0-alpha.45",
 		"vue": "3.2.37"
