--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -7,19 +7,20 @@
 		"components:lint": "eslint component-demos/**",
 		"docs:build": "vitepress build docs",
 		"docs:dev": "vitepress dev docs",
-		"docs:preview": "vitepress preview docs"
+		"docs:preview": "vitepress preview docs",
+		"test": "vitest run"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "4.0.0",
 		"@wikimedia/codex": "0.6.1",
 		"@wikimedia/codex-design-tokens": "0.6.1",
 		"@wikimedia/codex-icons": "0.6.1",
-		"eslint": "^8.33.0",
 		"less": "2.5.3",
 		"postcss": "8.4.21",
 		"postcss-prefix-selector": "1.16.0",
 		"vite": "4.1.1",
 		"vitepress": "1.0.0-alpha.45",
+		"vitest": "0.29.1",
 		"vue": "3.2.37"
 	}
 }
