Frontend documentation: break vitest suite on console errors and warns
Bug: T329036
Change-Id: I0f58dc8aa4a2ee43222788101bad60ee9325066e

--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -21,6 +21,7 @@
 		"vite": "4.1.1",
 		"vitepress": "1.0.0-alpha.45",
 		"vitest": "0.29.1",
+		"vitest-fail-on-console": "0.3.0",
 		"vue": "3.2.37"
 	}
 }
