--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -12,9 +12,11 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "4.0.0",
+		"@vue/test-utils": "2.3.2",
 		"@wikimedia/codex": "0.6.1",
 		"@wikimedia/codex-design-tokens": "0.6.1",
 		"@wikimedia/codex-icons": "0.6.1",
+		"jsdom": "21.1.1",
 		"less": "2.5.3",
 		"postcss": "8.4.21",
 		"postcss-prefix-selector": "1.16.0",
