--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -4,11 +4,11 @@
 	"private": true,
 	"scripts": {
 		"components:build": "vite build --config vite.components.config.js --outDir dist",
-		"components:lint": "eslint component-demos/**",
+		"lint": "eslint .",
 		"docs:build": "vitepress build docs",
 		"docs:dev": "vitepress dev docs",
 		"docs:preview": "vitepress preview docs",
-		"test": "vitest run"
+		"test": "npm run lint && vitest run"
 	},
 	"devDependencies": {
 		"@pinia/testing": "0.0.12",
@@ -26,6 +26,7 @@
 		"vitepress": "1.0.0-alpha.45",
 		"vitest": "0.29.1",
 		"vitest-fail-on-console": "0.3.0",
-		"vue": "3.2.37"
+		"vue": "3.2.37",
+		"vue-banana-i18n": "2.3.0"
 	}
 }
