build: Updating @wikimedia/codex to 0.9.1
Change-Id: I95abdcfc548715ee3948305a152d319fb7d47ebf

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,13 @@
 	],
 	"overrides": [
 		{
-			"files": [ "jest.setup.js" ],
+			"files": [
+				"jest.setup.js"
+			],
 			"extends": [
 				"wikimedia/language/es6",
 				"wikimedia/mediawiki"
 			]
 		}
-
 	]
 }
