Document d3 as upstream library
Use Ieb75f23dfd103ebec8bdf7911d8bb6a0c77bb95d to document the use
of our custom d3 build (introduced in
If6f6caf84c33aee4d051cbf5d866b1610ce14b23).

Change-Id: I67948f8acc1d114c1d44768b25510de356f8f3c7

--- a/modules/lib/foreign-resources.yaml
+++ b/modules/lib/foreign-resources.yaml
@@ -1,3 +1,10 @@
+d3:
+  # built manually to reduce size: https://www.mediawiki.org/wiki/Extension:GrowthExperiments/Technical_documentation#d3.js
+  license: ISC
+  homepage: https://d3js.org/
+  version: 7.6.1
+  type: doc-only
+
 wikimedia-ui-base:
   license: MIT
   homepage: https://www.mediawiki.org/wiki/Wikimedia_User_Interface
