--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -11,13 +11,15 @@
 		"test": "vitest run"
 	},
 	"devDependencies": {
+		"@pinia/testing": "0.0.12",
 		"@vitejs/plugin-vue": "4.0.0",
 		"@vue/test-utils": "2.3.2",
-		"jsdom": "21.1.1",
 		"@wikimedia/codex": "0.8.0",
 		"@wikimedia/codex-design-tokens": "0.8.0",
 		"@wikimedia/codex-icons": "0.8.0",
+		"jsdom": "21.1.1",
 		"less": "2.5.3",
+		"pinia": "2.0.16",
 		"postcss": "8.4.21",
 		"postcss-prefix-selector": "1.16.0",
 		"vite": "4.1.1",
