documentation/frontend: Add npm command to update snapshots
Why:

- To make it easier for developers to know how to update snapshots that
  we use as part of tests for documentation/frontend

What:

- Add an npm alias for "test:update-snapshots" to update vitest snapshots

Change-Id: If615cbb1f93eb0b80b599cc7d37d1e92acb181ea

--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -8,7 +8,8 @@
 		"docs:build": "vitepress build docs",
 		"docs:dev": "vitepress dev docs",
 		"docs:preview": "vitepress preview docs",
-		"test": "npm run lint && vitest run"
+		"test": "npm run lint && vitest run",
+		"test:update-snapshots": "vitest --update --run"
 	},
 	"devDependencies": {
 		"@pinia/testing": "0.0.12",
