api-testing: Set higher timeout
Why:

- api-testing tests sometimes fail because the test runner hits the
  2000ms default

What:

- Set a 20s limit for the timeout

Change-Id: If7d7cc83285f39cbd8e428f3cbfdaea26c639c15

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "GrowthExperiments",
 	"private": true,
 	"scripts": {
-		"api-testing": "mocha --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
+		"api-testing": "mocha --timeout 20000 --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
 		"doc": "cd documentation/frontend && npm ci && npm run docs:build",
 		"minify-svg": "svgo --config=.svgo.config.js --quiet --recursive --folder images/",
 		"selenium-daily": "npm run selenium-test",
