--- a/documentation/frontend/package.json
+++ b/documentation/frontend/package.json
@@ -8,12 +8,13 @@
 		"docs:build": "vitepress build docs",
 		"docs:dev": "vitepress dev docs",
 		"docs:preview": "vitepress preview docs",
-		"test": "npm run lint && vitest run",
+		"test": "npm run lint && vitest run --coverage",
 		"test:update-snapshots": "vitest --update --run"
 	},
 	"devDependencies": {
 		"@pinia/testing": "0.0.12",
 		"@vitejs/plugin-vue": "4.0.0",
+		"@vitest/coverage-v8": "0.32.0",
 		"@vue/test-utils": "2.3.2",
 		"@wikimedia/codex": "0.9.1",
 		"@wikimedia/codex-design-tokens": "0.9.1",
@@ -25,7 +26,7 @@
 		"postcss-prefix-selector": "1.16.0",
 		"vite": "4.1.1",
 		"vitepress": "1.0.0-alpha.45",
-		"vitest": "0.29.1",
+		"vitest": "0.32.0",
 		"vitest-fail-on-console": "0.3.0",
 		"vue": "3.2.37",
 		"vue-banana-i18n": "2.3.0"
