--- a/modules/ext.growthExperiments.MentorDashboard/.eslintrc.json
+++ b/modules/ext.growthExperiments.MentorDashboard/.eslintrc.json
@@ -29,7 +29,14 @@
 					"code": 120,
 					"template": 120,
 					"comments": 120
-				} ]
+				} ],
+				"vue/no-unsupported-features": [
+					"error",
+					{
+						"version": "^3.2.27",
+						"ignores": []
+					}
+				]
 			}
 		},
 		{
