Eslint: Removes reundant eslint check and upgrades linter to ES6
Suppresses eslint warning for
"Unused eslint-disable directive"

Change-Id: I3ff357878159e050707b7c2a3f43f2cae201c291

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -1,7 +1,7 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client-es6",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
@@ -13,6 +13,7 @@
 		"commonjs": true
 	},
 	"rules": {
+		"no-var": "off",
 		"max-len": "off"
 	},
 	"settings": {
