build: Updating dependencies
composer:
* mediawiki/minus-x: 1.1.1 → 1.1.3
* php-parallel-lint/php-parallel-lint: 1.3.2 → 1.4.0

npm:
* grunt-banana-checker: 0.11.1 → 0.13.0
* grunt-eslint: 24.0.1 → 24.3.0
* grunt-stylelint: 0.18.0 → 0.20.1
* stylelint-config-wikimedia: 0.14.0 → 0.17.2
  The following rules are failing and were disabled:
  * @stylistic/declaration-colon-space-after
  * @stylistic/indentation
  The following rules no longer exist and were removed:
  * function-comma-newline-after
  * function-comma-space-after
  * function-parentheses-newline-inside
  * function-parentheses-space-inside
* wdio-mediawiki: 2.1.0 → 2.5.0

Additional changes:
* Re-generated the NPM lock file.

Change-Id: I1529c9a71abc69a86be3216762be37adcf2f7287

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,10 +3,8 @@
 	"rules": {
 		"selector-max-id": null,
 		"no-descending-specificity": null,
-		"function-comma-newline-after": "always-multi-line",
-		"function-comma-space-after": "always-single-line",
-		"function-parentheses-newline-inside": "always-multi-line",
-		"function-parentheses-space-inside": "always-single-line",
-		"declaration-property-unit-disallowed-list": null
+		"declaration-property-unit-disallowed-list": null,
+		"@stylistic/declaration-colon-space-after": null,
+		"@stylistic/indentation": null
 	}
 }
