tests: Add Cypress test for Special:Impact
Starting with a simple test to assert the Special:Impact does indeed
show a main-namespace edit of a new user.

Based on other Cypress configurations in the MediaWiki extensions
EntitySchema, Cite, and WikibaseLexeme.

Bug: T373321
Change-Id: I96590539aa9999a7f5c3b870f2c903ea9db687d4

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 		"api-testing": "mocha --timeout 20000 --require tests/api-testing/fixtures.cjs --parallel --recursive tests/api-testing",
 		"doc": "cd documentation/frontend && npm ci && npm run docs:build",
 		"minify:svg": "svgo --config=.svgo.config.js --quiet --recursive --folder images/",
-		"selenium-daily": "npm run selenium-test",
-		"selenium-test": "wdio tests/selenium/wdio.conf.js",
+		"selenium-test": "npm run cy:run && wdio tests/selenium/wdio.conf.js",
+		"cy:open": "CYPRESS_CACHE_FOLDER=./cypress/.cache cypress open",
+		"cy:run": "CYPRESS_CACHE_FOLDER=./cypress/.cache cypress run",
 		"test": "grunt test && npm run test:jest && npm run test:doc",
 		"test:jest": "jest",
 		"test:doc": "cd documentation/frontend && npm ci && npm run test",
@@ -18,6 +19,8 @@
 		"@babel/preset-env": "7.16.11",
 		"@rollup/plugin-node-resolve": "15.0.1",
 		"@rollup/plugin-terser": "0.1.0",
+		"@typescript-eslint/eslint-plugin": "^7.18.0",
+		"@typescript-eslint/parser": "^7.18.0",
 		"@vue/test-utils": "2.0.0-rc.21",
 		"@vue/vue3-jest": "27.0.0-alpha.4",
 		"@wdio/cli": "7.19.7",
@@ -27,8 +30,10 @@
 		"@wdio/mocha-framework": "7.16.6",
 		"@wdio/spec-reporter": "7.19.7",
 		"@wikimedia/codex": "1.13.0",
+		"@wmde/eslint-config-wikimedia-typescript": "^0.2.12",
 		"api-testing": "1.6.0",
 		"babel-core": "6.26.3",
+		"cypress": "^13.14.2",
 		"d3-array": "3.2.0",
 		"d3-interpolate": "3.0.1",
 		"d3-path": "3.0.1",
@@ -38,6 +43,8 @@
 		"d3-time": "3.0.0",
 		"d3-time-format": "4.1.0",
 		"eslint-config-wikimedia": "0.28.2",
+		"eslint-plugin-chai-friendly": "^1.0.1",
+		"eslint-plugin-cypress": "^3.5.0",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
 		"grunt-eslint": "24.3.0",
@@ -51,6 +58,7 @@
 		"stylelint-config-recommended-vue": "1.4.0",
 		"stylelint-config-wikimedia": "0.17.2",
 		"svgo": "3.2.0",
+		"typescript-eslint": "^7.8.0",
 		"vue": "3.4.27",
 		"vuex": "4.0.2",
 		"wdio-intercept-service": "4.2.2",
