--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,17 @@
 				"wikimedia/language/es6",
 				"wikimedia/mediawiki"
 			]
+		},
+		{
+			"files": [
+				"**/*.ts"
+			],
+			"extends": [
+				"@wmde/wikimedia-typescript"
+			],
+			"rules": {
+				"comma-dangle": [ "error", "always-multiline" ]
+			}
 		}
 	]
 }
