Rename NewImpact class to Impact
Bug: T350077
Depends-On: I4fc2d279bcde3d902bc88caef4d10f22e013f42a
Change-Id: I87b05cb9bbefc9990121bdc31b984c75870b12f6

--- a/modules/ext.growthExperiments.Homepage.Impact/.eslintrc.json
+++ b/modules/ext.growthExperiments.Homepage.Impact/.eslintrc.json
@@ -29,7 +29,10 @@
 					"code": 120,
 					"template": 120,
 					"comments": 120
-				} ]
+				} ],
+				"vue/multi-word-component-names": ["error", {
+					"ignores": ["Impact"]
+				}]
 			}
 		},
 		{
