build: Updating @wikimedia/codex to 1.13.1
Change-Id: I57249dc0bb3e5940fcbaba3490f4f06cee8d3bb0

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,10 @@
 				"@wmde/wikimedia-typescript"
 			],
 			"rules": {
-				"comma-dangle": [ "error", "always-multiline" ]
+				"comma-dangle": [
+					"error",
+					"always-multiline"
+				]
 			}
 		}
 	]
