test(DataStore): assert last request is correctly cancelled
Trigger three fetachTasks requests and ensure the first two
are discarded. Simulate delay on the execution of the
catch callback, where the last apiPromise was incorrectly
unset.

Bug: T369742
Change-Id: I6c857dde41251cc746644f4d698159f067f2ece8

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -31,5 +31,16 @@
 				"SuggestionWidget": "SuggestionWidget"
 			}
 		}
-	}
+	},
+	"overrides": [
+		{
+			"files": [ "**/*.test.js" ],
+			"extends": [
+				"wikimedia/server"
+			],
+			"env": {
+				"jest": true
+			}
+		}
+	]
 }
