chore: assert types in CI
Then we can extend this further in the follow-up commit to also
type-check some new production js.

Change-Id: I4d25fc39929af748826044b7db6fa5ca9f5c41fe

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,12 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"target": "esnext",
 		"lib": [ "es6", "dom" ],
-		"types": [ "cypress", "node" ]
+		"types": [ "cypress", "node" ],
+		"moduleResolution": "node"
 	},
-	"include": [ "**/*.ts" ]
+	"include": [
+		"**/*.ts",
+		"../cypress.config.ts"
+	]
 }
