--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"selenium-test": "npm run cy:run && wdio tests/selenium/wdio.conf.js",
 		"cy:open": "CYPRESS_CACHE_FOLDER=./cypress/.cache cypress open",
 		"cy:run": "CYPRESS_CACHE_FOLDER=./cypress/.cache cypress run",
-		"test": "grunt test && npm run test:jest && npm run test:doc",
+		"test": "npm run test:types && grunt test && npm run test:jest && npm run test:doc",
 		"test:jest": "jest",
 		"test:doc": "cd documentation/frontend && npm ci && npm run test",
 		"test:jest:update": "jest -u",
+		"test:types": "tsc --noEmit -p cypress/tsconfig.json",
 		"coverage": "npm run test:jest",
 		"rollup": "rollup -c"
 	},
@@ -19,6 +20,7 @@
 		"@babel/preset-env": "7.16.11",
 		"@rollup/plugin-node-resolve": "15.0.1",
 		"@rollup/plugin-terser": "0.1.0",
+		"@types/node": "^22.9.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
 		"@vue/test-utils": "2.0.0-rc.21",
@@ -30,10 +32,11 @@
 		"@wdio/mocha-framework": "7.16.6",
 		"@wdio/spec-reporter": "7.19.7",
 		"@wikimedia/codex": "1.14.0",
+		"@wikimedia/types-wikimedia": "^0.4.4",
 		"@wmde/eslint-config-wikimedia-typescript": "^0.2.12",
 		"api-testing": "1.6.0",
 		"babel-core": "6.26.3",
-		"cypress": "^13.14.2",
+		"cypress": "^13.15.1",
 		"d3-array": "3.2.0",
 		"d3-interpolate": "3.0.1",
 		"d3-path": "3.0.1",
@@ -44,7 +47,7 @@
 		"d3-time-format": "4.1.0",
 		"eslint-config-wikimedia": "0.28.2",
 		"eslint-plugin-chai-friendly": "^1.0.1",
-		"eslint-plugin-cypress": "^3.5.0",
+		"eslint-plugin-cypress": "^3.6.0",
 		"grunt": "1.6.1",
 		"grunt-banana-checker": "0.13.0",
 		"grunt-eslint": "24.3.0",
@@ -58,6 +61,7 @@
 		"stylelint-config-recommended-vue": "1.4.0",
 		"stylelint-config-wikimedia": "0.17.2",
 		"svgo": "3.2.0",
+		"typescript": "^4.9.5",
 		"typescript-eslint": "^7.8.0",
 		"vue": "3.4.27",
 		"vuex": "4.0.2",
