Update jest dependencies
Somehow, the current dependencies got confused upon a tsconfig.json
being added to the repository root, see:
https://integration.wikimedia.org/ci/job/mwgate-node18/79872/consoleFull

That error does not appear to occur with the more recent dependencies
added by this change.

Change-Id: I7319cce05bdc394fd2e828c8bdc402745d4a20fc

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"@types/node": "^22.9.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
-		"@vue/test-utils": "2.0.0-rc.21",
-		"@vue/vue3-jest": "27.0.0-alpha.4",
+		"@vue/test-utils": "^2.4.6",
+		"@vue/vue3-jest": "^29.2.6",
 		"@wdio/cli": "7.19.7",
 		"@wdio/devtools-service": "7.19.7",
 		"@wdio/junit-reporter": "7.16.6",
@@ -52,7 +52,8 @@
 		"grunt-banana-checker": "0.13.0",
 		"grunt-eslint": "24.3.0",
 		"grunt-stylelint": "0.20.1",
-		"jest": "27.4.7",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"jest-fail-on-console": "^3.0.2",
 		"jquery": "3.7.1",
 		"moment": "^2.29.4",
