--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@babel/preset-env": "7.16.11",
 		"@rollup/plugin-node-resolve": "15.0.1",
 		"@rollup/plugin-terser": "0.1.0",
+		"@types/jquery": "^3.5.32",
 		"@types/node": "^22.9.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
