cypress: print browser console logs to CI console
This makes it easier to debug failures in CI by logging console contents
on failure (there might be important MediaWiki messages there).

Inspired by Ib8766409eccce773e538bfdfc64580c5155c4e34

Change-Id: I38b0a6ae513847a95900da7171953c6a82cc7466

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"api-testing": "1.6.0",
 		"babel-core": "6.26.3",
 		"cypress": "^13.15.1",
+		"cypress-terminal-report": "^7.0.4",
 		"d3-array": "3.2.0",
 		"d3-interpolate": "3.0.1",
 		"d3-path": "3.0.1",
