Prepare for surfacing structured tasks (squashed)
This commit contains the following 5 squashed changes:

* Iff035f8f2bbd2e4b522cc991c06ee57de7f96176
* Ib6eec1ab942874b10b79c16353a92673b4e9ddb3
* Iadaa8fea7cdf3f6eb0d5a055b635e0fabec4ef58
* I29ad7f546e9fafee81f50f63e52958bf92b34b6c
* Ia129f35255893dc2e14add338835978076d75865

They have all been merged into the master branch and have been squashed
here for ease of backporting.

Bug: T379976
Change-Id: Ic1fa23a1eeaba34f74644ad222e50559d605a74c

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,7 +3,9 @@
 		"target": "esnext",
 		"lib": [ "es6", "dom" ],
 		"types": [ "cypress", "node" ],
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true
 	},
 	"include": [
 		"**/*.ts",
