--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -52,8 +52,10 @@
 			],
 			"rules": {
 				"jsdoc/valid-types": "off",
+				"jsdoc/no-undefined-types": "off",
 				"es-x/no-async-functions": "off",
 				"es-x/no-array-prototype-includes": "off",
+				"es-x/no-object-values": "off",
 				"es-x/no-trailing-function-commas": "off",
 				"no-cond-assign": "off",
 				"comma-dangle": [
