Use `wikimedia/client` instead of `client-es6`
This is currently the same as client-es6 but will automatically
update when we change the default ES version.

Change-Id: Id9a853dcc6edc9db2f9a545ccf7398ead88dca58

--- a/documentation/frontend/.eslintrc.json
+++ b/documentation/frontend/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"root": true,
-	"extends": [ "wikimedia/mediawiki", "wikimedia/client-es6" ],
+	"extends": [ "wikimedia/mediawiki", "wikimedia/client" ],
 	"rules": {
 		"vue/component-name-in-template-casing": [ "error", "kebab-case" ],
 		"vue/no-unsupported-features": [
@@ -11,7 +11,7 @@
 	"overrides": [
 		{
 			"files": [ "docs/*.cjs" ],
-			"extends": [ "wikimedia/mediawiki", "wikimedia/client-es6" ]
+			"extends": [ "wikimedia/mediawiki", "wikimedia/client" ]
 		},
 		{
 			"files": [ "vite.components.config.js", "vitest.config.js" ],
